[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/SnowPlatform.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/GreenShip.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/PlatformMove.gd" type="Script" id=3]
[ext_resource path="res://scenes/ObjectiveArea.gd" type="Script" id=4]
[ext_resource path="res://assets/meteorBrown_big1.png" type="Texture" id=5]
[ext_resource path="res://scenes/ResetLevel.gd" type="Script" id=6]
[ext_resource path="res://assets/Backgrounds/colored_grass.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.375, 39.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 570, 10 )

[node name="Level2" type="Node"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 298.5, 297.75 )
scale = Vector2( 0.581055, 0.586426 )
texture = ExtResource( 7 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 893, 298 )
scale = Vector2( 0.581055, 0.586426 )
texture = ExtResource( 7 )

[node name="PlatformMove" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="SnowPlatform" parent="PlatformMove" instance=ExtResource( 1 )]
position = Vector2( 35, 565 )

[node name="SnowPlatform2" parent="PlatformMove" instance=ExtResource( 1 )]
position = Vector2( 105, 565 )

[node name="SnowPlatform3" parent="PlatformMove" instance=ExtResource( 1 )]
position = Vector2( 35, 495 )

[node name="SnowPlatform4" parent="PlatformMove" instance=ExtResource( 1 )]
position = Vector2( 175, 565 )

[node name="SnowPlatform5" parent="PlatformMove" instance=ExtResource( 1 )]
position = Vector2( 35, 425 )

[node name="BlueShip" parent="." instance=ExtResource( 2 )]
position = Vector2( 132, 414 )

[node name="ObjectiveArea" type="Area2D" parent="."]
position = Vector2( 884, 1 )
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveArea"]
position = Vector2( 70.625, 40 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 955, 41 )
scale = Vector2( 0.579208, 0.571429 )
texture = ExtResource( 5 )

[node name="ResetLevel" type="Area2D" parent="."]
position = Vector2( 503, 612 )
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResetLevel"]
position = Vector2( 1, 0 )
shape = SubResource( 2 )

[connection signal="body_entered" from="ObjectiveArea" to="ObjectiveArea" method="_on_ObjectiveArea_body_entered"]
[connection signal="body_entered" from="ResetLevel" to="ResetLevel" method="_on_ResetLevel_body_entered"]
